tablas resto clasificacion

--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -399,10 +399,10 @@ La autoevaluación es un proceso en el que los estudiantes evalúan su propio tr
 Se han encontrado muchos trabajos en la literatura que utilizan este enfoque para evaluar competencias genéricas. De acuerdo a las preguntas de investigación de este trabajo únicamente se han recopilado aquellos trabajos que bajo este enfoque hagan uso de los ordenadores.
 
 \bigskip
-\textbf{Competencias evaluadas (Q1)}
+\textbf{Competencias evaluadas}
 \bigskip
 
-El \emph{Trabajo en equipo} es la competencia más evaluada mediante este proceso de evaluación, ya que encontramos varios trabajos en los que después de realizar un trabajo en equipo los estudiante se evalúan unos a otros (evaluación entre iguales)~\cite{ficapal2015learning,barbera2011assessment,khamis2012measurement}. También adquieren protagonismo competencias relacionadas con el trabajo en equipos, como son la \emph{comunicación} y la \emph{responsabilidad}. El espíritu empresarial (\emph{emprendimiento}) y el \emph{idioma} son las otras competencias que destacan dentro de este grupo de procesos de evaluación. En la tabla~\ref{tab:CompetenciasAuto} se puede ver el listado de trabajos para cada competencia.
+El \emph{trabajo en equipo} es la competencia más evaluada mediante este proceso de evaluación, ya que encontramos varios trabajos en los que después de realizar un trabajo en equipo los estudiante se evalúan unos a otros (evaluación entre iguales)~\cite{ficapal2015learning,barbera2011assessment,khamis2012measurement}. También adquieren protagonismo competencias relacionadas con el trabajo en equipos, como son la \emph{comunicación} y la \emph{responsabilidad}. El espíritu empresarial (\emph{emprendimiento}) y el \emph{idioma} son las otras competencias que destacan dentro de este grupo de procesos de evaluación. En la tabla~\ref{tab:CompetenciasAuto} se puede ver el listado de trabajos para cada competencia.
 
 % starcic2008sustaining: Pregunta a profesores por todas las competencias mediante cuestionario sobre lo bueno de utilizar e-portfolio
 % so2011mapping: solo se ha leído el abstract y no se especifican
@@ -442,54 +442,224 @@ El \emph{Trabajo en equipo} es la competencia más evaluada mediante este proces
 \label{tab:CompetenciasAuto}
 \end{table} 
 
-
-
 \bigskip
-\textbf{Métodos utilizados (Q2)}
+\textbf{Estrategias}
 \bigskip
 
-Se han encontrado varios trabajos que implementan una metodología de \emph{aprendizaje basado en problemas} (ABP o, del inglés, PBL, problem-based learning) para desarrollar competencias específicas y genéricas en sus estudiantes y que después se evalúan mediante rúbricas de autoevaluación y evaluación entre iguales. También se acompañan de rúbricas del mismo tipo diversas herramientas aplicadas en algunos trabajos y que estan ligadas al ámbito empresarial (contabilidad, gestión de equipos, gestión de proyectos, ... etc.) como Cycloid~\cite{chang2009international} y Tricuspoid~\cite{achcaoucaou2014competence}.
+Los trabajos seleccionados en esta parte siguen todos una estrategia muy parecida. Se utilizan una o varias herramientas y después se realizan cuestionarios de autoevaluación o evaluación entre compañeros. También podemos encontrar algún trabajo en el que el cuestionario también se pasa antes de aplicar la herramienta. A continuación se describen las diferentes estrategias encontradas, con los elementos que en ella aparecen y en la tabla~\ref{tab:MetodosAuto} se muestran los trabajos asociados a cada una:
 
-ABP	--> Rúbrica profesores 90 auto 10 (Herramienta Rubistar) 	\cite{lasa2013problem}
-		--> Rúbrica auto												\cite{renau2010teaching}
-		--> Peer														\cite{johnson2002encouraging}
-		--> Rúbricas Moodle auto y peer	 							\cite{masip2013self}
+\begin{itemize}
+\item \emph{Metodología ABP}: trabajos que implementan una metodología de \emph{aprendizaje basado en problemas} (ABP o, del inglés, PBL, problem-based learning) para desarrollar competencias específicas y genéricas en sus estudiantes y que después se evalúan mediante rúbricas de autoevaluación y evaluación entre iguales.
+\item \emph{Practicas con herramientas empresariales}: herramientas ligadas al ámbito empresarial (contabilidad, gestión de equipos, gestión de proyectos, ... etc.) acompañadas de rúbricas de autoevaluación.
+\item \emph{Trabajo en E-Portfolio}: un e-portfolio (del inglés \emph{electronic portfolio}), consiste en un conjunto de documentos, generalmente textos, archivos e imágenes, gestionados en un entorno web por un usuario. Se han recopilado trabajos donde los estudiantes trabajan con esta herramienta durante el curso y al final autoevalúan el desempeño de alguna competencia genérica
+\item \emph{Cuestionarios de nivel}: cuestionarios que miden el nivel de los estudiantes en el desempeño competencias genéricas previamente al inicio de una actividad o un curso.
+\item \emph{Trabajo en equipo en plataforma online}: tras haber trabajado los estudiantes en equipos en un entorno de aprendizaje virtual se realizan cuestionarios de autoevaluación y evaluación entre iguales para medir su desempeño en diferentes competencias genéricas.
+\end{itemize}
 
-Herramientas empresariales ... SEGUIR POR AQUÍ
 
-Se han encontrado varios trabajos que implementan una metodología de \emph{aprendizaje basado en problemas} (ABP o, del inglés, PBL, problem-based learning) para desarrollar competencias específicas y genéricas en sus estudiantes. En \cite{lasa2013problem} los profesores llevaron a cabo la evaluación del 90\% de las competencias utilizando la herramienta de rúbricas \emph{RubiStar}, mientras que los estudiantes mediante autoevaluación y evaluación entre iguales se encargaron del otro 10\%. En \cite{renau2010teaching} también se lleva a cabo una experiencia basada en una metodología ABP para el desarrollo de la competencia en \emph{lengua extranjera} (inglés) en la que los estudiantes llevaban a cabo una autoevaluación de su nivel de adquisición de la competencia. En \cite{johnson2002encouraging} se muestran ejercicios para el desarrollo de competencias genéricas relacionados también con otra experiencia basada en una metodología ABP y en unas presentaciones, siguiendo un enfoque de evaluaciones entre compañeros. En otro trabajo, vemos como los estudiantes después de haber realizado experiencias de videoconferencias en inglés, la competencia de \emph{inglés como lengua extranjera} junto con las competencias de \emph{trabajo en equipo} y \emph{comunicación oral} se evalúan en \cite{masip2013self} mediante auto y co-evaluación a través de Moodle.
+\begin{table}
+  \begin{center}
+  \begin{tabular}{| m{3.5cm} | m{3.5cm} | m{5.5cm} |}
+    \hline
+    MÉTODO & EVALUACIÓN & TRABAJOS\\
+    \hline
+    \hline
+    Metodología ABP & Autoevaluación y evaluación entre iguales &  \cite{lasa2013problem,renau2010teaching,johnson2002encouraging,masip2013self} \\
+    \hline
+    Practicas con herramientas empresariales & Autoevaluación &  \cite{chang2009international,achcaoucaou2014competence} \\
+    \hline
+    Trabajo en E-Portfolio & Autoevaluación &  \cite{arno2011promoting,starcic2008sustaining} \\
+    \hline
+    Cuestionarios de nivel & Autoevaluación &  \cite{sevilla2012assessment,so2011mapping} \\
+    \hline
+    Trabajo en equipo en plataforma online & Autoevaluación y evaluación entre iguales &  \cite{ficapal2015learning,khamis2012measurement,barbera2011assessment,ruizacarate2013soft,piedra2010measuring,pinto2011assessment,carreras2013promotion} \\
+    \hline
+  \end{tabular}
+\end{center}
+\caption{Métodos utilizados en la autoevaluación y evaluación entre iguales}
+\label{tab:MetodosAuto}
+\end{table} 
 
-El espíritu empresarial es considerado un factor fundamental para el desarrollo económico en todos los países del mundo \cite{DeXena2012educacion} y son muchos los trabajos que tratan de fomentar competencias genéricas relacionadas con las habilidades que un emprendedor ha de desempeñar. En \cite{chang2009international} se utiliza la herramienta Cycloid para el desarrollo de competencias en la gestión de proyectos y posteriormente se llevan a cabo autoevaluaciones de los propios estudiantes para valorar la adquisición de dichas competencias. En \cite{marquez2010have} se autoevalúan las competencias de \emph{iniciativa} y \emph{espíritu emprendedor}. También se autoevalúan competencias \emph{empresariales} en  \cite{achcaoucaou2014competence} mediante el uso de Tricuspoid. 
+% En \cite{mcloughlin2006beyond} se presentan una revisión de herramientas online para trabajar y evaluar competencias genéricas. Entre ellas también se mencionan herramientas colaborativas para la competencia del \emph{trabajo en equipo}. 
 
-Un e-portfolio (del inglés \emph{electronic portfolio}), consiste en un conjunto de documentos, generalmente textos, archivos e imágenes, gestionados en un entorno web por un usuario. Se han recopilado trabajos donde los estudiantes trabajan con esta herramienta durante el curso y al final autoevalúan el desempeño de alguna competencia genérica. Por ejemplo, en \cite{arno2011promoting} se lleva a cabo una autoevaluación de la competencia del \emph{pensamiento crítico} tras haber trabajado en un e-portfolio. Mientras que en \emph{starcic2008sustaining} se utiliza también un e-portfolio para el desarrollo profesional de los estudiantes y se facilitan rúbricas para la propia autoevaluación después de sus competencias genéricas.
 
-En muchos trabajos la autoevaluación completa algún otro tipo de evaluación. En \cite{sevilla2012assessment} se utiliza plataforma online inGenio Tester para evaluar el nivel de adquisición de competencias en las modalidades de autoevaluación y evaluación por parte del profesor. En \cite{ficapal2015learning} se presenta un modelo que persigue el aprendizaje basado en equipos para la adquisición y evaluación de competencias genéricas en un contexto de e-learning. Los estudiantes trabajaban en grupo y evaluaban su desempeño en el \emph{trabajo en equipo} mediante una rúbrica. La calificación se completó con un cuestionario. En \cite{khamis2012measurement} también se trabajó y evaluó la competencia de \emph{trabajo en equipo}. Para ello los estudiantes trabajaron en equipo y la evaluación tenía dos partes: por un lado los compañeros eran evaluados por otros compañeros (evaluación entre iguales) y por otro lado, también el profesor formaba parte de esta evaluación. En \cite{barbera2011assessment} se desarrollan y evalúan el desarrollo y desempeño de tres competencias genéricas en sus estudiantes: \emph{comunicación verbal}, \emph{comunicación escrita} y \emph{trabajo en equipo}. Este estudio propone una metodología basada en el modelo de tres niveles de evaluación de competencias utilizado por la Universidad de Deusto mediante diferentes herramientas utilizando tres tipos de evaluaciones: autoevaluación, evaluación entre iguales y evaluación del profesor.
+%Cuestionario			\cite{marquez2010have}		Sólo resumen y no veo referencia tecnológica: Lo quitaría auqnue habría que quitarlo de todos los informes, estadísticas, ... etc.
 
-En \cite{ruizacarate2013soft} los estudiantes responden a un cuestionario llamado \emph{Evalsoft} dónde son evaluados de las siguientes habilidades sociales: \emph{compromiso}, \emph{comunicación} y \emph{trabajo en equipo}. Para saber si el contexto es importante (online o presencial), se realiza en dos universidades: la Universidad a Distancia de Madrid (UDIMA), que ofrece un entorno de aprendizaje-enseñanza online y la Universidad Politécnica de Madrid (UPM), que además ofrece clases presenciales. Los resultados muestran que en un contexto online los estudiantes muestran un grado más alto de \emph{compromiso} y de \emph{trabajo en equipo}. Las herramientas 2.0 como wikis o blogs también se utilizan para medir el desempeño en competencias genéricas. En \cite{piedra2010measuring} se utilizan una serie de rúbricas para la autoevaluación de los estudiantes a partir de una serie de indicadores del desempeño de las competencias genéricas de la \emph{creatividad} y del \emph{trabajo colaborativo} a partir de su trabajo en herramientas de trabajo colaborativo. En \cite{mcloughlin2006beyond} se presentan una revisión de herramientas online para trabajar y evaluar competencias genéricas. Entre ellas también se mencionan herramientas colaborativas para la competencia del \emph{trabajo en equipo}. 
+% Quitar también sin2007evaluating
 
-Para la evaluación de la competencia de la capacidad \emph{autocrítica} se realizó una experiencia en \cite{pinto2011assessment}, dónde un conjunto de profesores de diferentes titulaciones establecieron actividades para los estudiantes. Estos estudiantes evaluaron su propio trabajo. Para medir el grado de competencia de los estudiantes se utilizó la diferencia de la nota entre la que recibieron los estudiantes por parte del profesor y la que ellos mismos se pusieron. En \cite{sin2007evaluating} también se realizó una experiencia donde tanto los propios estudiantes como los profesores evaluaban el desempeño de las competencias de la comunicación en contabilidad, tanto las \emph{habilidades para expresarse de manera escrita} como del \emph{pensamiento analítico}.
+\bigskip
+\textbf{Limitaciones}
+\bigskip
 
-Para conocer el nivel de adquisición de competencias genéricas que poseen los estudiantes que acceden a la universidad y enfocándose en las diferencias entre los estudiantes de ciencias y los que no son de ciencias, se propone en \cite{so2011mapping} un cuestionario de autoevaluación. Aunque la autoevaluación y evaluación entre iguales son enfoques que quitan trabajo al docente, no todos son ventajas. Como se ha visto en algunos trabajos anteriores, este enfoque a menudo sólo se utiliza de manera complementaria a algún otro tipo de evaluación. Además, se puede dar el caso que la autoevaluación no se ajuste del todo a la realidad del desempeño del estudiante. Por ejemplo, en~\cite{carreras2013promotion} hay notables diferencias entre las calificaciones que se auto-asignan los estudiantes en algunas competencias y las calificaciones que le asignaron los profesores en esas mismas competencias. En ese trabajo se promovió la adquisición de competencias genéricas desde un punto de vista interdisciplinar y se diseñaron herramientas específicas para evaluar dichas habilidades. A la hora de evaluar, se realizaron tanto autoevaluaciones como evaluaciones del profesor. En esta experiencia se evaluaron cuatro competencias genéricas: \emph{capacidad de análisis},  \emph{habilidades de escritura}, \emph{responsabilidad} y \emph{capacidad de trabajo en equipo}. Cabe destacar discrepancias entre las calificaciones que se auto-asignan los estudiantes en las dos primeras competencias. En la \emph{capacidad de análisis} la discrepancia es de un 55,65\%, mientras que en las \emph{habilidades de escritura} de un 13,75\%.
+Aunque la autoevaluación y evaluación entre iguales son enfoques que quitan trabajo al docente, no todos son ventajas. En algunos trabajos anteriores, este enfoque a menudo sólo se utiliza de manera complementaria a algún otro tipo de evaluación~\cite{lasa2013problem,sevilla2012assessment,khamis2012measurement,barbera2011assessment,pinto2011assessment}. Además, se puede dar el caso que la autoevaluación no se ajuste del todo a la realidad del desempeño del estudiante. Por ejemplo, en~\cite{carreras2013promotion} hay notables diferencias entre las calificaciones que se auto-asignan los estudiantes en algunas competencias y las calificaciones que le asignaron los profesores en esas mismas competencias. En ese trabajo se promovió la adquisición de competencias genéricas desde un punto de vista interdisciplinar y se diseñaron herramientas específicas para evaluar dichas habilidades. A la hora de evaluar, se realizaron tanto autoevaluaciones como evaluaciones del profesor. En esta experiencia se evaluaron cuatro competencias genéricas: \emph{capacidad de análisis},  \emph{habilidades de escritura}, \emph{responsabilidad} y \emph{capacidad de trabajo en equipo}. Cabe destacar discrepancias entre las calificaciones que se auto-asignan los estudiantes en las dos primeras competencias. En la \emph{capacidad de análisis} la discrepancia es de un 55,65\%, mientras que en las \emph{habilidades de escritura} de un 13,75\%.
 
 \subsubsection{Evaluación del profesor (teacher assessment)}
 
 En muchos casos la evaluación de competencias genéricas se realiza mediante un seguimiento continuo del trabajo del estudiante por parte del profesor. Este proceso es lo que se conoce como \emph{evaluación continua}. Esto permite ir introduciendo mejoras constantes en el proceso de aprendizaje, siendo éste el motivo por el que la evaluación continua se adopta como una estrategia de evaluación formativa más orientada al proceso de aprendizaje que a una valoración puntual. Actualmente, los expertos, influenciados por la \emph{Declaración de Bolonia}, consideran más apropiado desarrollar este tipo de sistemas de evaluación~\cite{garcia2005competencias}. 
 
-En trabajos como los mostrados en \cite{martin2010new,prashar2010competence}, el profesorado sigue una metodología de evaluación continua para evaluar las competencias de \emph{trabajo en equipo} y \emph{comunicación oral y escrita}. Se establecen una serie de indicadores que les permiten monitorizar el progreso de los estudiantes. Una herramienta que se suele utilizar para hacer un seguimiento del trabajo de los estudiantes a lo largo del curso es el e-portfolio. En \cite{martin2013acquired,rodriguez2010portfolio,benlloch2007adapting} los profesores evalúan el desempeño de los estudiantes en las competencias de \emph{trabajo en equipo} y \emph{habilidades de comunicación} o \emph{solución de problemas}, entre otras. Para ello utilizan el e-portfolio, aunque en todos los casos combinan la evaluación del trabajo realizado por cada estudiante en el suyo junto con las calificaciones de otras actividades, exámenes y cuestionarios.
+% Todas competencias en \cite{serrano2013hiperion}, se queda fuera de la tabla porque no habla de ninguna en concreto, sino de trabajo futuro.
 
-En \cite{yang2014fine} se define un modelo de itinerario de aprendizaje que soporta la evaluación de algunos conocimientos y competencias para describir el progreso de aprendizaje del estudiante. El modelo se define matemáticamente para poder formalmente definir las evaluaciones y para poder reutilizar las fórmulas. Aunque se reconoce las ventajas de un sistema que automatice este proceso, hasta el momento son los profesores los que evalúan a sus estudiantes en cada una de sus etapas. Además, muestran su reticencia a un sistema 100\% automático. Las competencias de \emph{comunicación} y \emph{escritura} se evalúan en este trabajo.
 
-Uno de los problemas de la no automatización de los procesos de evaluación es la escalabilidad de algunos procesos de evaluación. En \cite{serrano2013hiperion} se diseña \emph{Hiperion}, una sistema de recomendación que ayuda a diseñar actividades adaptadas a cada estudiante para mejorar sus competencias. En el estudio de caso mostrado en este trabajo, los profesores evaluaban las competencias de los estudiantes manualmente y después aplicaban Hiperion. La principal desventaja de la herramienta es el tiempo que el profesor ha de dedicar para asignar los diferentes logros y el peso de cada nota para cada competencia en las actividades. En \cite{ward2011developing} se desarrollan una serie de módulos para Moodle para el desarrollo de competencias empresariales. Los alumnos realizan una serie de actividades para cada módulo y el profesor evalúa mediante conferencia vía Skype si cada estudiante sabe lo que ha respondido. En \cite{lacuesta2009active} se utiliza una metodología ABP, dónde se realiza una evaluación individualizada de cada estudiante y de cada grupo de estudiantes. El autor considera que el esfuerzo necesario y carga de trabajo para cada profesor sólo es un poco mayor al habitual. En este trabajo se evalúan competencias como el \emph{pensamiento crítico}, \emph{trabajo en equipo}, \emph{planificación}, \emph{comunicación}, etc. Para minimizar el esfuerzo están las rúbricas, utilizadas en \cite{casan2015developing}, donde el docente se encarga mediante su uso de la evaluación en las habilidades de \emph{comunicación escrita} del alumnado.
+\bigskip
+\textbf{Competencias evaluadas}
+\bigskip
+
+Las competencias genéricas más evaluadas por este método son las de \emph{comunicación} y la de \emph{trabajo en equipo}. En la tabla~\ref{tab:CompetenciasProfesor} puede ver la relación de competencias evaluadas y los trabajos.
+
+\begin{table}
+  \begin{center}
+  \begin{tabular}{| m{3.5cm} | m{9cm} |}
+    \hline
+    COMPETENCIA & TRABAJOS\\
+    \hline
+    \hline
+    Comunicación & \cite{martin2010new,prashar2010competence,martin2013acquired,rodriguez2010portfolio,benlloch2007adapting,yang2014fine,lacuesta2009active,casan2015developing} \\
+	\hline
+	Emprendimiento & \cite{ward2011developing} \\
+	\hline
+	Pensamiento crítico & \cite{lacuesta2009active} \\
+	\hline
+	Planificación y gestión del tiempo & \cite{lacuesta2009active} \\
+	\hline
+	Resolución de problemas & \cite{martin2013acquired,rodriguez2010portfolio,benlloch2007adapting} \\    
+    \hline
+    Trabajo en equipo & \cite{martin2010new,prashar2010competence,martin2013acquired,rodriguez2010portfolio,benlloch2007adapting,lacuesta2009active} \\    
+    \hline
+  \end{tabular}
+\end{center}
+\caption{Competencias evaluadas por el profesor}
+\label{tab:CompetenciasProfesor}
+\end{table} 
+
+
+\bigskip
+\textbf{Estrategias}
+\bigskip
+
+En este trabajo nos encontramos con dos estrategias básicas: por un lado estrategias basadas en la evaluación continua, en la que los profesores recogen evidencias del trabajo de los estudiantes en entornos virtuales durante el curso con las que rellenan rúbricas, hojas de cálculo o la herramienta de evaluación que utilicen. Por otro lado, tenemos estrategias basadas en evaluaciones finales, donde los profesores lo que evaluan es un resultado final del trabajo del alumno. En la tabla~\ref{tab:MetodosProfesor} puede ver los métodos que sigue cada uno de los trabajos que se han recopilado para este tipo de evaluación.
+
+\begin{table}
+  \begin{center}
+  \begin{tabular}{| m{3.5cm} | m{3.5cm} | m{5.5cm} |}
+    \hline
+    MÉTODO & EVALUACIÓN & TRABAJOS\\
+    \hline
+    \hline
+    Metodología ABP & Profesor &  \cite{lacuesta2009active} \\
+    \hline
+    Indicadores para evaluación continua & Profesor &  \cite{martin2010new,prashar2010competence} \\
+    \hline
+    Trabajo en e-portfolio & Estudiantes y Profesor &  \cite{martin2013acquired,rodriguez2010portfolio,benlloch2007adapting} \\
+    \hline
+    Modelo matemático evaluado por etapas & Profesor &  \cite{yang2014fine} \\
+    \hline
+    Módulos Moodle competencias empresariales & Profesor &  \cite{ward2011developing} \\
+    \hline
+    Rúbricas & Profesor &  \cite{casan2015developing} \\
+    \hline
+  \end{tabular}
+\end{center}
+\caption{Métodos utilizados en la evaluación de los profesores}
+\label{tab:MetodosProfesor}
+\end{table}
+
+
+\bigskip
+\textbf{Limitaciones}
+\bigskip
+
+Uno de los problemas de la no automatización de los procesos de evaluación es la escalabilidad de algunos procesos de evaluación. En~\cite{serrano2013hiperion} se diseña \emph{Hiperion}, una sistema de recomendación que ayuda a diseñar actividades adaptadas a cada estudiante para mejorar sus competencias. En el estudio de caso mostrado en este trabajo, los profesores evaluaban las competencias de los estudiantes manualmente y después aplicaban Hiperion. La principal desventaja de la herramienta es el tiempo que el profesor ha de dedicar para asignar los diferentes logros y el peso de cada nota para cada competencia en las actividades.
+
+Siguiendo con los problemas de escalabilidad nos encontramos con el trabajo mostrado en~\cite{lacuesta2009active}. En él se utiliza una metodología ABP, en la que se realiza una evaluación individualizada de cada estudiante y de cada grupo de estudiantes. El autor considera también que el esfuerzo necesario y carga de trabajo para cada profesor es un poco mayor al habitual. 
 
 \subsubsection{Cuestionarios (Questionnaries)}
 
-Algunos de los cuestionarios que se han encontrado dentro de la bibliografía son tests de personalidad. Este tipo de cuestionario está diseñado para revelar aspectos del carácter o mecanismos psicológicos de un individuo. La evaluación de la personalidad se puede ver como la aplicación de procedimientos para medir aspectos de la personalidad de manera que sean aplicables a otros dominios~\cite{wiggins2003paradigms}. Uno de esos dominios es el laboral, sobre todo las entrevistas de trabajo. Es común la necesidad del empresario por conocer la aptitud o no del candidato a un puesto para asumir cierto rol dentro de una empresa. En \cite{andre2011formal} se propone un modelo formal para asignar trabajadores a proyectos software. Para definir el modelo se siguió un método Delphi, donde los expertos definieron criterios para la evaluación de habilidades de trabajo en equipo y definieron un test psicológico. Este modelo se plasmó en un software, que a partir de las respuestas del usuario, le asignaba un rol u otro dentro de los equipos. En \cite{lumsden2005assessment} se muestra la herramienta PQA (Personal Quality Assessment). Esta herramienta de evaluación contiene diversos test para la evaluación de la competencia genérica del \emph{razonamiento} y del {comportamiento ético} en el ámbito médico. En \cite{park2006moral} se muestra VIA-Youth (Values in Action Invetory for Youth) un cuestionario para evaluar la competencia \emph{moral} de los estudiantes a partir de preguntas relacionadas con 24 características de la personalidad. 
+Algunos de los cuestionarios que se han encontrado dentro de la bibliografía son tests de personalidad. Este tipo de cuestionario está diseñado para revelar aspectos del carácter o mecanismos psicológicos de un individuo. La evaluación de la personalidad se puede ver como la aplicación de procedimientos para medir aspectos de la personalidad de manera que sean aplicables a otros dominios~\cite{wiggins2003paradigms}. 
 
-Las habilidades relacionadas con el trabajo en equipo también son de las que más se miden a traves de cuestionarios. Según~\cite{martinez2014teamwork}, para obtener un buen desempeño en las competencias de trabajo en equipo hay que entrenarlas. Para contrastar su hipótesis, llevan a cabo un experimento donde se evalúa la competencia de \emph{trabajo en equipo} mediante el TWBQ (Team Work Behaviour Questionnaire). TWBQ es un cuestionario que evalúa actividades individuales que contribuyen al devenir del equipo: por un lado, \emph{interacción con los compañeros}: conflictos y solución de problemas, colaboración, comunicación; y por otro lado \emph{gestión del equipo}: liderazgo, establecimiento de objetivos, planificación de taras, coordinación con los miembros del equipo). En \cite{barbera2011design} se lleva a cabo una experiencia en la que se aplicó una metodología ABP en la asignatura de Gestión de Empresas. Trabajaron las competencias de \emph{trabajo en equipo}, \emph{desarrollo de proyecto} y \emph{comunicación oral}. Para asegurar la objetividad de la evaluación se utilizaron rúbricas y cuestionarios. El profesorado que participó en la experiencia la consideró muy positiva, pero reconocieron que tuvieron que dedicar un elevado número de horas, tanto para las clases como para la evaluación de muchos proyectos.
+\bigskip
+\textbf{Competencias evaluadas}
+\bigskip
 
-En \cite{badcock2010developing} se evalúan cuatro competencias genéricas: \emph{pensamiento crítico}, \emph{habilidades interpersonales}, \emph{solución de problemas} y \emph{comunicación escrita}. Para ello se utiliza el test GSA (Graduate Skills Assessment). El GSA fue desarrollado por el ACER (Australian Council for Educational Research)~\footnote{http://www.acer.edu.au/gsa}  bajo su Programa de Innovación para la Educación Superior. El objetivo con el que se diseñó es el de evaluar estas competencias genéricas cuando los estudiantes acceden a la universidad. Esto ayuda al profesorado a tener una medida objetiva para dichas competencias. Otro trabajo se muestra en~\cite{fernandez2011experience}, dónde se realiza un experimento en el que se presenta un test para evaluar la competencia de \emph{comunicación en un segundo idioma}, en este caso en inglés. En \cite{aziz2007appraisal,rashid2008engineering,a2007outcome} se utilizan modelos matemáticos (\emph{Rasch model} y \emph{ESPEGS model}) para la evaluación de los objetivos de aprendizaje del curso y de competencias genéricas. La entrada de estos modelos matemáticos son la evaluación de los estudiantes realizadas por los docentes para cada actividad. 
+Uno de esos dominios es el laboral, sobre todo las entrevistas de trabajo. Es común la necesidad del empresario por conocer la aptitud o no del candidato a un puesto para asumir cierto rol dentro de una empresa. Todas las competencias están relacionadas por tanto con características de los encuestados que sean de interés para los empleadores (trabajo en equipo, responsabilidad, comunicación, habilidades interpersonales, cratividad, gestión de proyectos, liderazgo, resolución de problemas, etc.). En la tabla~\ref{tab:CompetenciasCuestionarios} se muestran las competencias evaluadas y los trabajos en que se evalúan.
 
-Los cuestionarios pueden constar de preguntas abiertas o cerradas. Las preguntas abiertas obligan al evaluado a formular la respuesta a la pregunta y al evaluador a leerla para corregirla, lo que conlleva una mayor carga de trabajo. En \cite{albergaria2011critical} se presenta un cuestionario para evaluar el \emph{pensamiento crítico}, la \emph{curiosidad} y la \emph{creatividad}. El cuestionario consta sobre todo de preguntas abiertas, lo que implica tener que dedicar más tiempo y recursos para realizar las evaluaciones. En~\cite{vizcarro2013assessment}, profesores de los grados de Computación y Matemáticas y de Ingeniería Informática elaboraron una prueba escrita para la evaluación de la competencia genérica de \emph{resolución de problemas}. Este constaba de preguntas abiertas y cerradas, siendo minuciosamente seleccionadas por el profesorado que formaba parte en la experiencia, así como las respuestas que se esperarían de los estudiantes. El proyecto fue muy satisfactorio, aunque en las conclusiones vemos que los autores indican que encontrar un equilibrio entre el esfuerzo necesario para desarrollar este tipo de dispositivos de evaluación y la posibilidad de no hacerlo, o hacerlo pero no tan exhaustivamente, es algo que la comunidad académica debe abordar seriamente.
+\begin{table}
+  \begin{center}
+  \begin{tabular}{| m{3.5cm} | m{9cm} |}
+    \hline
+    COMPETENCIA & TRABAJOS\\
+    \hline
+    \hline
+    Análisis & \cite{lumsden2005assessment} \\	  
+    \hline
+    Comunicación & \cite{martinez2014teamwork,barbera2011design,badcock2010developing} \\	  
+    \hline
+    Creatividad & \cite{albergaria2011critical} \\	  
+    \hline
+    Gestión de proyectos & \cite{martinez2014teamwork,barbera2011design} \\	  
+    \hline
+    Habilidades interpersonales & \cite{martinez2014teamwork,badcock2010developing} \\	  
+    \hline
+    Idioma & \cite{fernandez2011experience} \\  
+    \hline
+    Liderazgo & \cite{martinez2014teamwork} \\	  
+    \hline
+    Pensamiento crítico & \cite{badcock2010developing,albergaria2011critical} \\	  
+    \hline
+    Planificación y gestión del tiempo & \cite{martinez2014teamwork} \\	  
+    \hline
+    Resolución de problemas & \cite{badcock2010developing,vizcarro2013assessment} \\	  
+    \hline
+    Responsabilidad & \cite{lumsden2005assessment,park2006moral} \\	  
+    \hline
+    Trabajo en equipo & \cite{martinez2014teamwork,barbera2011design} \\	  
+    \hline
+  \end{tabular}
+\end{center}
+\caption{Competencias evaluadas mediante cuestionarios}
+\label{tab:CompetenciasCuestionarios}
+\end{table} 
+
+\bigskip
+\textbf{Estrategias}
+\bigskip
+
+En esta sección se muestran diferentes herramientas que consisten en cuestionarios para la evaluación automática de competencias genéricas (tabla~\ref{tab:MetodosCuestionarios}).
+
+\begin{table}
+  \begin{center}
+  \begin{tabular}{| m{3.5cm} | m{3.5cm} | m{5.5cm} |}
+    \hline
+    MÉTODO & EVALUACIÓN & TRABAJOS\\
+    \hline
+    \hline
+    ABP & Test &  \cite{barbera2011design} \\
+    \hline
+    Cuestionario preguntas abiertas & Test &  \cite{albergaria2011critical,vizcarro2013assessment} \\
+    \hline
+    GSA (Graduate Skills Assessment) & Test &  \cite{badcock2010developing} \\
+    \hline
+    Herramienta PQA (Personal Quality Assessment) & Test &  \cite{lumsden2005assessment} \\
+    \hline
+    TWBQ (Team Work Behaviour Questionnaire) & Cuestionario &  \cite{park2006moral} \\
+    \hline
+    VIA-Youth (Values in Action Invetory for Youth) & Cuestionario &  \cite{park2006moral} \\
+    \hline
+  \end{tabular}
+\end{center}
+\caption{Tipos de cuestionarios}
+\label{tab:MetodosCuestionarios}
+\end{table}
+
+Simple test idioma: \cite{fernandez2011experience}
+Modelos matemáticos \emph{Rasch model} y \emph{ESPEGS model}: su entrada es las evaluaciones tomadas por el profesor: \cite{aziz2007appraisal,rashid2008engineering,a2007outcome}
+
+\bigskip
+\textbf{Limitaciones}
+\bigskip
+
+El diseño de cuestionarios que reflejen aspectos de la personalidad es un trabajo de expertos. En \cite{andre2011formal} se propuso un modelo formal para asignar trabajadores a proyectos software. Para definir el modelo se siguió un método Delphi, donde un grupo de expertos definieron criterios para la evaluación de habilidades de trabajo en equipo y definieron un test psicológico. La creación de estos test psicológicos no está al alcance de todos los profesores.
+
+Volvemos a encontrarnos con problemas de escalabilidad. El profesorado que participó en la experiencia de \cite{barbera2011design} reconoció que tuvieron que dedicar un elevado número de horas, tanto para las clases como para la evaluación de muchos proyectos. Más aun si los cuestionarios constan de preguntas abiertas y cerradas. Las preguntas abiertas obligan al evaluado a formular la respuesta a la pregunta y al evaluador a leerla para corregirla, lo que conlleva una mayor carga de trabajo. En \cite{albergaria2011critical} se presenta un cuestionario para evaluar el \emph{pensamiento crítico}, la \emph{curiosidad} y la \emph{creatividad}. El cuestionario consta sobre todo de preguntas abiertas, lo que implica tener que dedicar más tiempo y recursos para realizar las evaluaciones. En~\cite{vizcarro2013assessment}, profesores de los grados de Computación y Matemáticas y de Ingeniería Informática elaboraron una prueba escrita para la evaluación de la competencia genérica de \emph{resolución de problemas}. Este constaba de preguntas abiertas y cerradas, siendo minuciosamente seleccionadas por el profesorado que formaba parte en la experiencia, así como las respuestas que se esperarían de los estudiantes. El proyecto fue muy satisfactorio, aunque en las conclusiones vemos que los autores indican que encontrar un equilibrio entre el esfuerzo necesario para desarrollar este tipo de dispositivos de evaluación y la posibilidad de no hacerlo, o hacerlo pero no tan exhaustivamente, es algo que la comunidad académica debe abordar seriamente.
 
 
 
